[project]
name = "mortgage-renewal-calc"
version = "0.1.0"
description = "Scenario Planning for Mortgage Renewal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo~=0.15.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pytest>=9.0.2",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
